# Jarvis

./: .env.example  .gitignore  README.md  config.json  pyproject.toml  requirements.txt
jarvis/: .gitignore  README.md  config.yaml  main.py  personas.yaml  requirements.txt
jarvis/core/: audio.py  chat_ui.py  confirmation.py  executor.py  hud.py  llm_client.py  logging_utils.py  memory.py  persona.py  planner.py  tts.py
jarvis/skills/: help.py  instagram_prepare.py  open_app.py  remember_alias.py  set_folder.py  type_text.py  whatsapp_prepare.py
jarviso/: __init__.py  __main__.py  branding.py  config.py  logging_setup.py
jarviso/actions/: __init__.py  browser.py  files.py  system.py  time.py
jarviso/brain/: memory.py  ollama_client.py  prompting.py
jarviso/core/: engine.py  events.py  router.py  safety.py  types.py
jarviso/speech/: mic.py  stt_vosk.py  tts_pyttsx3.py
jarviso/ui/: about.py  app.py  controller.py
prompts/: README.md  system_base.txt
prompts/modes/: stark_default.txt  unhinged.txt
prompts/traits/: arya_traits.txt
src/jarvis/: __init__.py  __main__.py  doctor.py
tests/: conftest.py  test_branding.py  test_doctor.py  test_engine_dispatch.py  test_ollama_client.py  test_prompting.py  test_router.py  test_safety.py
